--- a/src/app/works/documentos/documento-list/documento-list.component.html
+++ b/src/app/works/documentos/documento-list/documento-list.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div class="card documento-form">
+  <div *ngIf="canManageDocumentos" class="card documento-form">
     <h4>Adicionar Novo Documento</h4>
     <form (ngSubmit)="addDocumento()">
       <div class="form-group">
@@ -34,7 +34,7 @@
         <span>
           <a [href]="documento.url" target="_blank">{{ documento.nomeArquivo }}</a> ({{ getPastaName(documento.pasta) }})
         </span>
-        <button (click)="deleteDocumento(documento.id)" class="btn-delete">Excluir</button>
+        <button *ngIf="canManageDocumentos" (click)="deleteDocumento(documento.id)" class="btn-delete">Excluir</button>
       </li>
     </ul>
   </div>
