--- a/src/app/works/manutencoes/manutencao-list/manutencao-list.component.html
+++ b/src/app/works/manutencoes/manutencao-list/manutencao-list.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div class="card manutencao-form">
+  <div *ngIf="canManageManutencoes" class="card manutencao-form">
     <h4>Adicionar Nova Manutenção</h4>
     <form (ngSubmit)="addManutencao()">
       <div class="form-group">
@@ -36,7 +36,7 @@
           <span *ngIf="manutencao.datasManutencao"> (Datas: {{ manutencao.datasManutencao }})</span>
           <span *ngIf="manutencao.imagemUrl"> | <a [href]="manutencao.imagemUrl" target="_blank">Ver Imagem</a></span>
         </span>
-        <button (click)="deleteManutencao(manutencao.id)" class="btn-danger">Excluir</button>
+        <button *ngIf="canManageManutencoes" (click)="deleteManutencao(manutencao.id)" class="btn-danger">Excluir</button>
       </li>
     </ul>
   </div>
