--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -20,7 +20,7 @@
           <label for="confirmPassword">Confirmar Senha</label>
           <input type="password" id="confirmPassword" name="confirmPassword" [(ngModel)]="registerData.confirmPassword" required>
         </div>
-        <div class="form-group">
+        <div class="form-group custom-select-field">
           <label for="role">Perfil de Usuário</label>
           <select id="role" name="role" [(ngModel)]="registerData.role" required>
             <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
