--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -45,7 +45,7 @@
 .register-card {
   width: 100%;
   max-width: 400px; // Max width for the form itself
-  padding: 2rem;
+  padding: 0rem 2rem 1rem 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -53,7 +53,6 @@
 
 .logo {
   width: 100px;
-  margin-bottom: 1.5rem;
 }
 
 h2 {
@@ -62,27 +61,41 @@ h2 {
 }
 
 .form-group {
-  margin-bottom: 1rem;
-  text-align: left;
+  margin-bottom: 15px;
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+    text-align: left;
+  }
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 1rem;
+  }
 }
 
-label {
-  display: block;
-  margin-bottom: 0.5rem;
-  color: #555;
-  font-weight: bold;
-}
-
-input[type="email"],
-input[type="password"],
-input[type="text"] {
+.custom-select-field select {
   width: 100%;
-  padding: 0.8rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   box-sizing: border-box;
   font-size: 1rem;
-  transition: border-color 0.3s, box-shadow 0.3s;
+  background-color: #fff; /* Ensure background is white */
+  -webkit-appearance: none; /* Remove default browser styling for select */
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13.2-5.4H18.2c-4.1%200-7.9%201.5-10.9%204.5-3.1%203-4.6%206.8-4.6%2010.9%200%204.1%201.5%207.9%204.6%2010.9l128.9%20128.9c3%203%206.8%204.5%2010.9%204.5s7.9-1.5%2010.9-4.5l128.9-128.9c3.1-3%204.6-6.8%204.6-10.9s-1.5-7.9-4.6-10.9z%22%2F%3E%3C%2Fsvg%3E'); /* Custom arrow */
+  background-repeat: no-repeat;
+  background-position: right 10px top 50%;
+  background-size: 12px;
 }
 
 input[type="email"]:focus,
