feat: instalacao-do-AOS-animation

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -31,7 +31,7 @@
       </form>
     </div>
   </div>
-  <div class="content-section">
+  <div class="content-section" data-aos="fade-left" data-aos-duration="2000">
     <img src="img/bannerMP.png" alt="Company Logo" class="company-logo">
     <div class="marketing-phrase">
       <h1>Sua Gestão de Obras Simplificada.</h1>
