feat: grafico-na-dashboard-com-chart.js

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,10 +1,11 @@
 <div class="auth-page-container">
   <div class="content-section">
+    <div div data-aos="fade-right" data-aos-duration="2000">
     <img src="img/bannerMP.png" alt="Company Logo" class="company-logo">
     <div class="marketing-phrase">
       <h1>Sua Gestão de Obras Simplificada.</h1>
       <p>Conectando equipes, otimizando projetos e construindo o futuro.</p>
-    </div>
+    </div></div>
   </div>
   <div class="form-section">
     <div class="login-card">
