--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -31,11 +31,12 @@
       </form>
     </div>
   </div>
-  <div class="content-section" data-aos="fade-left" data-aos-duration="2000">
+  <div class="content-section" >
+    <div data-aos="fade-left" data-aos-duration="2000">
     <img src="img/bannerMP.png" alt="Company Logo" class="company-logo">
     <div class="marketing-phrase">
       <h1>Sua Gestão de Obras Simplificada.</h1>
       <p>Conectando equipes, otimizando projetos e construindo o futuro.</p>
-    </div>
+    </div></div>
   </div>
 </div>
