--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -61,6 +61,10 @@
     </div>
   </div>
 
+  <div class="chart-container">
+    <canvas id="statusChart"></canvas>
+  </div>
+
   <ng-container *ngIf="dashboardSummary?.obrasRecentes as obrasRecentes">
     <div *ngIf="obrasRecentes.length > 0" class="card recent-works">
       <div class="main-title">
