--- a/src/app/works/obra-detail/obra-detail.component.html
+++ b/src/app/works/obra-detail/obra-detail.component.html
@@ -2,7 +2,7 @@
   <div class="obra-header">
     <button class="btn-back" (click)="goBack()">Voltar</button> 
     <h1>{{ obra?.nome }}</h1>
-    <p class="obra-location">{{ obra?.localizacao }}</p> <!-- Restored subtitle -->
+    <p class="obra-location">{{ obra?.localizacao }}</p> 
     <div class="obra-actions">
       <!--<button *ngIf="canEditObra" class="btn btn-primary" (click)="editObra()"> <img src="img/editIcon.svg" alt=""><span>Editar Obra</span></button> -->
       <button *ngIf="canEditObra" class="btn btn-danger" (click)="deleteObra()"><img src="img/trashIcon.svg" alt=""><span>Excluir Obra</span></button>
