--- a/src/app/works/obra-detail/obra-detail.component.scss
+++ b/src/app/works/obra-detail/obra-detail.component.scss
@@ -28,23 +28,23 @@ h1{
 .btn-back {
   background-color: #f0f0f0;
   color: #333;
-  padding: 0.5rem 1rem; /* Smaller padding */
+  padding: 0.5rem 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.9rem; /* Smaller font size */
+  font-size: 0.9rem; 
   margin-bottom: 1rem;
   transition: all 0.3s ease;
 
   &:hover {
-    border-color: #ef4444; /* Red border on hover */
+    border-color: #ef4444;
     color: #ef4444;
   }
 }
 
 h2 {
-  color: #e53935; // Red
-  margin-bottom: 0.5rem; /* Adjusted margin */
+  color: #e53935; 
+  margin-bottom: 0.5rem; 
 }
 
 .subtitle {
@@ -62,12 +62,12 @@ h2 {
 }
 
 .loading-message {
-  background-color: #e0f2f7; // Light blue
+  background-color: #e0f2f7; 
   color: #0277bd;
 }
 
 .error-message {
-  background-color: #ffebee; // Light red
+  background-color: #ffebee; 
   color: #c62828;
 }
 
@@ -109,7 +109,7 @@ h2 {
 
 .progress-bar-fill {
   height: 100%;
-  background-color: #ef4444; /* Red color for the progress bar */
+  background-color: #ef4444; 
   border-radius: 10px;
   transition: width 0.5s ease-in-out;
 }
@@ -129,7 +129,7 @@ h2 {
 }
 
 .detail-section h3 {
-  color: #e53935; // Red
+  color: #e53935; 
   margin-top: 0;
   margin-bottom: 1rem;
   font-size: 1.2rem;
@@ -169,7 +169,6 @@ h2 {
   text-decoration: underline;
 }
 
-/* Responsive adjustments for smaller screens */
 @media (max-width: 320px) {
   .obra-detail-container {
     padding: 0.5rem;
