--- a/src/app/works/documentos/documento-list/documento-list.component.html
+++ b/src/app/works/documentos/documento-list/documento-list.component.html
@@ -4,27 +4,12 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div *ngIf="canManageDocumentos" class="card documento-form">
-    <h4>Adicionar Novo Documento</h4>
-    <form (ngSubmit)="addDocumento()">
-      <div class="form-group">
-        <label for="nomeArquivo">Nome do Arquivo</label>
-        <input type="text" id="nomeArquivo" name="nomeArquivo" [(ngModel)]="newDocumento.nomeArquivo" required>
-      </div>
-      <div class="form-group">
-        <label for="url">URL do Documento</label>
-        <input type="text" id="url" name="url" [(ngModel)]="newDocumento.url" required>
-      </div>
-      <div class="form-group">
-        <label for="pasta">Pasta</label>
-        <select id="pasta" name="pasta" [(ngModel)]="newDocumento.pasta">
-          <option *ngFor="let pastaOption of tipoPastaOptions" [ngValue]="pastaOption">
-            {{ getPastaName(pastaOption) }}
-          </option>
-        </select>
-      </div>
-      <button type="submit" class="btn-primary">Adicionar Documento</button>
-    </form>
+  <div *ngIf="canManageDocumentos" class="upload-area" (click)="fileInput.click()">
+    <input hidden type="file" #fileInput (change)="onFileSelected($event)">
+    <div class="upload-content">
+      <button class="btn-attach">Anexar Arquivo</button>
+      <p class="upload-info">Tamanho máximo: 5MB. Tipos suportados: PDF, DOCX, XLSX.</p>
+    </div>
   </div>
 
   <div class="card documentos-display">
