style: adicionando-icones-na-pagina-de-criar-e-editar-obras

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
         <li><a routerLink="/obras" routerLinkActive="active">Obras</a></li>
-        <li><a routerLink="/chatbot" routerLinkActive="active">Assistente</a></li>
+        <li><a routerLink="/chatbot" routerLinkActive="active">Ajuda</a></li>
       </ul>
     </nav>
     </div>
@@ -33,7 +33,7 @@
     <ul>
       <li><a routerLink="/dashboard" routerLinkActive="active" (click)="closeMenu()">Dashboard</a></li>
       <li><a routerLink="/obras" routerLinkActive="active" (click)="closeMenu()">Obras</a></li>
-      <li><a routerLink="/chatbot" routerLinkActive="active" (click)="closeMenu()">Assistente</a></li>
+      <li><a routerLink="/chatbot" routerLinkActive="active" (click)="closeMenu()">Ajuda</a></li>
 
       <li>
         <button class="mobile-logout" (click)="logout()">
