--- a/src/app/chatbot/chatbot.component.scss
+++ b/src/app/chatbot/chatbot.component.scss
@@ -19,6 +19,7 @@
   background-color: #FF0000; 
   color: #FFFFFF;
   text-align: center;
+  border-radius: 0px 0px 20px 20px;
   font-size: 1.1rem; 
   font-weight: 600;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
